# azure-iot-app-template

./: .gitignore  Makefile  README.md  TODO  azure-deployment.json  azure-iot-app-template.sln  docker-compose.yaml
analytics-engine/: Dockerfile  README.md  pyproject.toml
analytics-engine/analytics_engine/: analytics.py  crud.py  database.py  kafka_consumer.py  main.py  models.py  routes.py
data-store/: README.md  init-mongo.js  init_kafka.sh  init_postgres.sh
iot-cloud-controller/App/: DatabaseSettings.cs  Dockerfile  DotNet.Docker.csproj  Program.cs  appsettings.json
iot-cloud-controller/App/Controllers/: DeviceSpecificationController.cs  SystemLogsController.cs
iot-cloud-controller/App/Models/: DeviceSpecification.cs  SystemLog.cs
iot-cloud-controller/App/Services/: DeviceSpecificationService.cs  KafkaConsumerService.cs  SystemLogsService.cs
iot-device/iot-agent-simulator/App/: Dockerfile  DotNet.Docker.csproj  Program.cs  appsettings.json
iot-device/iot-device/App/: App.csproj  Dockerfile  Program.cs
messaging-service/iot-ingress-service/: Dockerfile  mqtt-broker.js  package-lock.json  package.json
monitoring-dashboard/: package-lock.json  package.json
monitoring-dashboard/src/app/: page.tsx
monitoring-dashboard/src/components/: MonitoringDashboard.tsx
monitoring-dashboard/src/lib/: api.ts
operator-dashboard/: Dockerfile  package-lock.json  package.json
operator-dashboard/src/app/: page.tsx
operator-dashboard/src/components/: Dashboard.tsx  DeviceReadingsChart.tsx
operator-dashboard/src/lib/: analyticsApi.ts
(+18 files in other folders)
